# refraction

./: .env.local.example  .eslintrc.json  .gitignore  AGENTS.md  CHECKPOINT_ACTIVITY_IMPLEMENTATION.md  CHECK_DEPLOYMENT.sh  CLAUDE.md  CSV_UPLOAD_GUIDE.md  DATA_LAYER_SCHEMA.md  DEPLOY_NFT_CONTRACT.sh  DEPLOY_SIMPLE_PAYMENT.sh  MOBILE_TESTING.md  PENDING_POINTS_GUIDE.md  POINTS_SYSTEM_SUMMARY.md  README.md  SOROBAN_CONTRACTS_SUMMARY.md  VERIFY_CONTRACT.sh  VERIFY_STORAGE.sh  bun.lockb  check-cors.sh  instrumentation-client.ts  jest.config.js  jest.setup.ts  next.config.mjs  output.css  package-lock.json  package.json  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts  supabase_schema_update.sql  tailwind.config.ts  tsconfig.json  unused-images.txt  vercel.json  vitest.config.ts
.claude/: settings.json
.cursor/: Dockerfile  environment.json  hooks.json
app/: fonts.css  global-error.tsx  globals.css  layout.tsx  page.tsx
components/: PDFViewer.tsx  PDFViewerClient.tsx  analytics-provider.tsx  artist-cta.tsx  assigned-number.tsx  auth-onboarding.tsx  auth.tsx  challenges-page.tsx  checkpoint.tsx  checkpoints.tsx  claim-footer.tsx  claim-header.tsx  coin-location-form.tsx  coins-page.tsx  connect-button.tsx  countdown.tsx  create-token.tsx  editorial.tsx  email-template.tsx  farcaster-ready.tsx  footer-hero.tsx  footer.tsx  game-mapbox.tsx  game.tsx  header.tsx  hero.tsx  ikaro-auth.tsx  ikaro-header.tsx  ikaro-mint.tsx  interactive-map.tsx  iyk.tsx  leaderboard-avatar.tsx  leaderboard-page.tsx  leaderboard.tsx  location-lists-drawer.tsx  location-search.test.tsx  location-search.tsx  logout.tsx  map-card.tsx  map-landing.tsx  (+24 more)
data/: events.json
database/: add-address-to-locations.sql  add-aptos-wallet-to-players.sql  add-category-id-to-locations.sql  add-checkpoint-mode-to-checkpoints.sql  add-city-id-to-manual-events.sql  add-city-to-guides.sql  add-city-to-locations.sql  add-coin-image-thumb-url-to-locations.sql  add-description-to-locations.sql  add-description-to-sponsored-activations.sql  add-end-date-to-manual-events.sql  add-hero-image-to-perks.sql  (+68 more)
soroban-contracts/irl_token/: Cargo.toml  README.md  rust-toolchain.toml
soroban-contracts/irl_token/src/: lib.rs  test.rs
soroban-contracts/nft_collection/: Cargo.toml  README.md  deploy.sh  metadata.json
soroban-contracts/nft_collection/src/: lib.rs  test.rs
soroban-contracts/simple_payment/: Cargo.toml  README.md  deploy.sh
soroban-contracts/simple_payment/src/: lib.rs  test.rs
soroban-contracts/simple_payment/test_snapshots/test/: test_burn.1.json  test_mint_and_balance.1.json  test_send_token.1.json  test_transfer.1.json
(+905 files in other folders)
