[package]
name = "nft_collection"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = "23.4"
stellar-tokens = { git = "https://github.com/OpenZeppelin/stellar-contracts", branch = "main" }
stellar-access = { git = "https://github.com/OpenZeppelin/stellar-contracts", branch = "main" }
stellar-macros = { git = "https://github.com/OpenZeppelin/stellar-contracts", branch = "main" }

[dev-dependencies]
soroban-sdk = { version = "23.4", features = ["testutils"] }

# Use vendored OpenSSL for dev dependencies to avoid system dependency issues
# This helps when running tests or building dev tools
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
